＜実践課題＞JavaScript(電卓)(小数点の不正入力を修正)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <input type="button" id="multiplication" value="*" onclick="arithmetic(this)"><br>
     <input type="button" id="n0" value="0" onclick="edit(this)">
     <input type="button" id="n00" value="00" onclick="edit(this)">
-    <input type="button" id="period" value="." onclick="arithmetic(this)">
+    <input type="button" id="period" value="." onclick="period(this)">
     <input type="button" id="division" value="/" onclick="arithmetic(this)"><br>
     <input type="button" id="AC" value="AC" onclick="update()">
     <input type="button" id="equal" value="=" onclick="calc()"><br>
